fix(CombinedReport): remove panel scrolll to prevent popover truncation
related to OPT-3969

--- a/client/src/components/Reports/controlPanels/CombinedReportPanel.scss
+++ b/client/src/components/Reports/controlPanels/CombinedReportPanel.scss
@@ -6,7 +6,6 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  @include scrollable;
 
   .Configuration {
     right: 10px;
